--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Kishore's Practice</title>
-  <link rel="stylesheet" href="text.css">
+  <link rel="stylesheet" href="indextext.css">
 </head>
 
 <body>
